--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "author": "Luis Eduardo",
   "license": "ISC",
   "dependencies": {
+    "ajv": "^6.11.0",
+    "ajv-errors": "^1.0.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
