--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "curso",
+  "name": "node-typescript",
   "version": "1.0.0",
-  "description": "API de Estudo com TS, NODE, ES6, Postgres e Sequelize",
+  "description": "Código base para APIs com TypeScript",
   "main": "server/server.ts",
   "scripts": {
     "start": "cross-env NODE_ENV=development ./node_modules/.bin/ts-node ./server/server.ts",
