--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.17.1",
     "http": "0.0.0",
     "http-status": "^1.4.2",
+    "log4js": "^6.1.1",
     "morgan": "^1.9.1",
     "pg": "^7.17.0",
     "sequelize": "^5.21.3",
