--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "express": "^4.17.1",
     "http": "0.0.0",
     "http-status": "^1.4.2",
+    "jsonwebtoken": "^8.5.1",
     "log4js": "^6.1.1",
     "morgan": "^1.9.1",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
     "pg": "^7.17.0",
     "sequelize": "^5.21.3",
     "sequelize-cli": "^5.5.1"
@@ -40,8 +43,11 @@
     "@types/chai": "^4.2.7",
     "@types/express": "^4.17.2",
     "@types/http-status": "^1.1.2",
+    "@types/jsonwebtoken": "^8.3.7",
     "@types/mocha": "^5.2.7",
     "@types/morgan": "^1.7.37",
+    "@types/passport": "^1.0.2",
+    "@types/passport-jwt": "^3.0.3",
     "@types/sequelize": "^4.28.8",
     "@types/supertest": "^2.0.8",
     "chai": "^4.2.0",
