--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server/server.ts",
   "scripts": {
     "start": "cross-env NODE_ENV=development ./node_modules/.bin/ts-node ./server/server.ts",
-    "builded": "cross-env NODE_ENV=development node ./dist/server/server.js",
+    "builded": "cross-env NODE_ENV=production node ./dist/server/server.js",
     "u-test": "cross-env NODE_ENV=test mocha --opts ./tests/unit/config/mocha.opts ./dist/tests/unit/unit.test.js",
     "i-test": "cross-env NODE_ENV=test mocha --opts ./tests/integration/config/mocha.opts ./dist/tests/integration/integration.test.js",
     "i-cover": "nyc --reporter=html npm run i-test",
@@ -30,6 +30,7 @@
     "http": "0.0.0",
     "http-status": "^1.4.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.15",
     "log4js": "^6.1.1",
     "morgan": "^1.9.1",
     "passport": "^0.4.1",
