--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development ./node_modules/.bin/ts-node ./server/server.ts",
     "builded": "cross-env NODE_ENV=production node ./dist/server/server.js",
-    "u-test": "cross-env NODE_ENV=test mocha --opts ./tests/unit/config/mocha.opts ./dist/tests/unit/unit.test.js",
-    "i-test": "cross-env NODE_ENV=test mocha --opts ./tests/integration/config/mocha.opts ./dist/tests/integration/integration.test.js",
+    "u-test": "cross-env NODE_ENV=test mocha --opts ./dist/tests/unit/config/mocha.opts ./dist/tests/unit/unit.test.js",
+    "i-test": "cross-env NODE_ENV=test mocha --opts ./dist/tests/integration/config/mocha.opts ./dist/tests/integration/integration.test.js",
     "i-cover": "nyc --reporter=html npm run i-test",
     "u-cover": "nyc --reporter=html npm run u-test"
   },
@@ -54,6 +54,9 @@
     "@types/supertest": "^2.0.8",
     "chai": "^4.2.0",
     "cross-env": "^7.0.0",
+    "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
+    "gulp-typescript": "^6.0.0-alpha.1",
     "istanbul": "^0.4.5",
     "mocha": "^7.0.0",
     "nyc": "^15.0.0",
