--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "builded": "cross-env NODE_ENV=production node ./dist/server/server.js",
     "u-test": "cross-env NODE_ENV=test mocha --opts ./dist/tests/unit/config/mocha.opts ./dist/tests/unit/unit.test.js",
     "i-test": "cross-env NODE_ENV=test mocha --opts ./dist/tests/integration/config/mocha.opts ./dist/tests/integration/integration.test.js",
-    "i-cover": "nyc --reporter=html npm run i-test",
-    "u-cover": "nyc --reporter=html npm run u-test"
+    "u-cover": "nyc --reporter=html npm run u-test",
+    "i-cover": "nyc --reporter=html npm run i-test"
   },
   "keywords": [
     "API",
@@ -33,6 +33,7 @@
     "lodash": "^4.17.15",
     "log4js": "^6.1.1",
     "morgan": "^1.9.1",
+    "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "pg": "^7.17.0",
@@ -48,6 +49,7 @@
     "@types/jsonwebtoken": "^8.3.7",
     "@types/mocha": "^5.2.7",
     "@types/morgan": "^1.7.37",
+    "@types/mysql": "^2.15.8",
     "@types/passport": "^1.0.2",
     "@types/passport-jwt": "^3.0.3",
     "@types/sequelize": "^4.28.8",
