--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ addons:
   mysql: '5.5.56'
 before_script:
   - mysql -u root --password="" < tests/db/estudo_test.sql
-  - npm i -g gulp-cli@2.2.0
+  - npm i -g gulp-cli
   - cd server/
   - npm install
   - gulp
