--- a/.travis.yml
+++ b/.travis.yml
@@ -14,8 +14,9 @@ addons:
   mysql: '5.5.56'
 before_script:
   - mysql -u root --password="" < tests/db/estudo_test.sql
-  - npm i -g gulp-cli gulp
+  - npm i -g gulp-cli
   - npm install
+  - ls -l
   - gulp
 script:
 - npm run u-test
