--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ addons:
   mysql: '5.5.56'
 before_script:
   - mysql -u root < tests/db/estudo_test.sql
-  - mysql -u root -e "GRANT ALL PRIVILEGES ON estudo_test.* TO 'root'@'%';";
+  - mysql -u root -e "select * from mysql.user;";
   - npm i -g gulp-cli
   - npm install
   - gulp
