--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "cross-env NODE_ENV=development ./node_modules/.bin/ts-node ./server/server.ts",
     "builded": "cross-env NODE_ENV=production node ./dist/server/server.js",
-    "u-test": "cross-env NODE_ENV=test mocha --opts ./dist/tests/unit/config/mocha.opts ./dist/tests/unit/unit.test.js",
-    "i-test": "cross-env NODE_ENV=test mocha --opts ./dist/tests/integration/config/mocha.opts ./dist/tests/integration/integration.test.js",
+    "u-test": "cross-env NODE_ENV=test mocha --opts ./dist/tests/unit/config/mocha.opts ./dist/tests/unit/unit.test.js --exit",
+    "i-test": "cross-env NODE_ENV=test mocha --opts ./dist/tests/integration/config/mocha.opts ./dist/tests/integration/integration.test.js --exit",
     "u-cover": "nyc --reporter=html npm run u-test",
     "i-cover": "nyc --reporter=html npm run i-test"
   },
