--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,8 +2,8 @@ sonar.projectKey=luiscomp_node-backend
 sonar.organization=luiscomp
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=node-backend
-#sonar.projectVersion=1.0
+sonar.projectName=node-backend
+sonar.projectVersion=1.0
  
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 #sonar.sources=.
