--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,10 @@ before_script:
 script: echo "Executanto tarefa..."
 jobs:
   include:
+    - stage: "Testes"
+      script: 
+        - npm run u-test
+        - npm run i-test
     - stage: "Sonar Scanner"
       script: sonar-scanner
     
