--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,15 @@ env:
   global:
   - NODE_ENV: test
   - TRAVIS: true
+addons:
+  sonarcloud:
+    organization: "luiscomp"
+    token:
+      secure: "e9f44b1380601a9df3d3281381a7c27aabc3000d"
 before_script:
   - mysql -u root < tests/db/Schema.sql
-  - mysql -u root < tests/db/Empresa.sql
-  - mysql -u root < tests/db/Usuario.sql
+  - mysql -u root amigo < tests/db/Empresa.sql
+  - mysql -u root amigo < tests/db/Usuario.sql
   - mysql -u root -e "CREATE USER 'tester'@'localhost' IDENTIFIED BY 'local@test';";
   - mysql -u root -e "GRANT ALL PRIVILEGES ON amigo.* TO 'tester'@'localhost';";
   - npm i -g gulp-cli
@@ -26,4 +31,6 @@ jobs:
       script: 
         - npm run u-test
         - npm run i-test
+    - stage: "Sonar Scanner"
+      script: sonar-scanner
     
