--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "author": "Luis Eduardo",
   "license": "MIT",
   "dependencies": {
-    "ajv": "^6.11.0",
+    "ajv": "^6.12.2",
     "ajv-errors": "^1.0.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
@@ -31,36 +31,38 @@
     "http-status": "^1.4.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
-    "log4js": "^6.1.1",
-    "morgan": "^1.9.1",
+    "log4js": "^6.2.1",
+    "morgan": "^1.10.0",
     "mysql": "^2.18.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
-    "@types/bluebird": "^3.5.29",
-    "@types/body-parser": "^1.17.1",
-    "@types/chai": "^4.2.7",
-    "@types/express": "^4.17.2",
+    "@types/bluebird": "^3.5.30",
+    "@types/body-parser": "^1.19.0",
+    "@types/chai": "^4.2.11",
+    "@types/express": "^4.17.6",
     "@types/http-status": "^1.1.2",
-    "@types/jsonwebtoken": "^8.3.7",
-    "@types/mocha": "^5.2.7",
-    "@types/morgan": "^1.7.37",
-    "@types/mysql": "^2.15.8",
-    "@types/passport": "^1.0.2",
+    "@types/jsonwebtoken": "^8.3.9",
+    "@types/mocha": "^7.0.2",
+    "@types/morgan": "^1.9.0",
+    "@types/mysql": "^2.15.10",
+    "@types/passport": "^1.0.3",
     "@types/passport-jwt": "^3.0.3",
     "@types/supertest": "^2.0.8",
     "chai": "^4.2.0",
-    "cross-env": "^7.0.0",
+    "cross-env": "^7.0.2",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
-    "gulp-typescript": "^6.0.0-alpha.1",
+    "gulp-typescript": "^5.0.1",
+    "http": "0.0.0",
+    "http-server": "^0.12.3",
     "istanbul": "^0.4.5",
     "mocha": "^7.1.2",
-    "nyc": "^15.0.0",
+    "nyc": "^15.0.1",
     "supertest": "^4.0.2",
-    "testdouble": "^3.12.5",
-    "ts-node": "^8.5.4",
-    "typescript": "^3.7.4"
+    "testdouble": "^3.13.1",
+    "ts-node": "^8.9.1",
+    "typescript": "^3.8.3"
   }
 }
