--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "@types/bluebird": "^3.5.30",
     "@types/body-parser": "^1.19.0",
     "@types/chai": "^4.2.11",
+    "@types/chai-as-promised": "^7.1.2",
     "@types/express": "^4.17.6",
     "@types/http-status": "^1.1.2",
     "@types/jsonwebtoken": "^8.3.9",
@@ -51,6 +52,7 @@
     "@types/passport-jwt": "^3.0.3",
     "@types/supertest": "^2.0.8",
     "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "cross-env": "^7.0.2",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
