Refatorado todo o código de teste

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ addons:
       secure: "e9f44b1380601a9df3d3281381a7c27aabc3000d"
 before_script:
   - mysql -u root < tests/db/Schema.sql
-  - mysql -u root -e 'USE amigo'
+  - mysql -u root -e 'USE amigo;'
   - mysql -u root < tests/db/Empresa.sql
   - mysql -u root < tests/db/Usuario.sql
   - mysql -u root -e "CREATE USER 'tester'@'localhost' IDENTIFIED BY 'local@test';";
