--- a/.travis.yml
+++ b/.travis.yml
@@ -18,8 +18,8 @@ addons:
 before_script:
   - mysql -u root < tests/db/Schema.sql
   - mysql -u root -e 'USE amigo;'
-  - mysql -u root < tests/db/Empresa.sql
-  - mysql -u root < tests/db/Usuario.sql
+  - mysql source tests/db/Empresa.sql
+  - mysql source tests/db/Usuario.sql
   - mysql -u root -e "CREATE USER 'tester'@'localhost' IDENTIFIED BY 'local@test';";
   - mysql -u root -e "GRANT ALL PRIVILEGES ON amigo.* TO 'tester'@'localhost';";
   - npm i -g gulp-cli
