--- a/.travis.yml
+++ b/.travis.yml
@@ -17,9 +17,8 @@ addons:
       secure: "e9f44b1380601a9df3d3281381a7c27aabc3000d"
 before_script:
   - mysql -u root < tests/db/Schema.sql
-  - mysql -u root -e 'USE amigo;'
-  - mysql source tests/db/Empresa.sql
-  - mysql source tests/db/Usuario.sql
+  - mysql -u root -p amigo < tests/db/Empresa.sql
+  - mysql -u root -p amigo < tests/db/Usuario.sql
   - mysql -u root -e "CREATE USER 'tester'@'localhost' IDENTIFIED BY 'local@test';";
   - mysql -u root -e "GRANT ALL PRIVILEGES ON amigo.* TO 'tester'@'localhost';";
   - npm i -g gulp-cli
