--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,5 +1,6 @@
 sonar.projectKey=luiscomp_node-backend
 sonar.organization=luiscomp
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
 # This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=node-backend
@@ -9,4 +10,4 @@ sonar.projectVersion=1.0
 #sonar.sources=.
  
 # Encoding of the source code. Default is default system encoding
-#sonar.sourceEncoding=UTF-8
+sonar.sourceEncoding=UTF-8
