Adicionando Code Coverage no SonarCloud

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,10 +30,9 @@ before_script:
 script: echo "Executanto tarefa..."
 jobs:
   include:
-    - stage: "Testes"
+    - stage: "Testes e Coverage"
       script: 
-        - npm run u-test
-        - npm run i-test
-    - stage: "Sonar Scanner"
-      script: sonar-scanner
+        - npm run u-cover
+        - npm run i-cover
+        - sonar-scanner
     
