--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=luiscomp_node-backend
 sonar.organization=luiscomp
-sonar.javascript.lcov.reportPaths=node-backend/coverage/lcov.info
+sonar.javascript.lcov.reportPaths=./coverage/lcov.info
 
 # This is the name and version displayed in the SonarCloud UI.
 sonar.projectName=node-backend
