Adicionado nodemon e eslint

--- a/package.json
+++ b/package.json
@@ -1,11 +1,10 @@
 {
-  "name": "node-typescript",
+  "name": "node-backend",
   "version": "1.0.0",
   "description": "Código base para APIs com TypeScript",
   "main": "src/server/server.ts",
   "scripts": {
-    "start": "cross-env NODE_ENV=development ts-node ./src/core/server/server.ts",
-    "build": "cross-env NODE_ENV=production node ./dist/src/core/server/server.js",
+    "dev": "cross-env NODE_ENV=development nodemon --watch \"src/\" --exec \"ts-node ./src/core/server/server.ts\" -e ts",
     "u-test": "cross-env NODE_ENV=test mocha --opts ./dist/tests/unit/config/mocha.opts ./dist/tests/unit/unit.test.js --exit",
     "i-test": "cross-env NODE_ENV=test mocha --opts ./dist/tests/integration/config/mocha.opts ./dist/tests/integration/integration.test.js --exit",
     "u-cover": "nyc --reporter=lcov --reporter=text-summary npm run u-test",
@@ -51,9 +50,17 @@
     "@types/passport": "^1.0.3",
     "@types/passport-jwt": "^3.0.3",
     "@types/supertest": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "^2.31.0",
+    "@typescript-eslint/parser": "^2.31.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "cross-env": "^7.0.2",
+    "eslint": "^6.8.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-typescript": "^5.0.1",
@@ -61,6 +68,7 @@
     "http-server": "^0.12.3",
     "istanbul": "^0.4.5",
     "mocha": "^7.1.2",
+    "nodemon": "^2.0.3",
     "nyc": "^15.0.1",
     "supertest": "^4.0.2",
     "testdouble": "^3.13.1",
